--- a/concdrift/results/figures/Figure5.tex
+++ b/concdrift/results/figures/Figure5.tex
@@ -9,7 +9,7 @@
     \begin{tikzpicture}
 
         % y-axis
-        \draw[->] (-1,-0.5) -- (-1,1.3) node[midway, left, xshift=-10pt] {$\E(y)$};
+        \draw[->] (-1,-0.5) -- (-1,1.3) node[midway, left, xshift=-10pt] {$\E(Y)$};
 
         % Abrupt concept drift
         \draw[thick] (0,0) -- (2,0) -- (2,1) -- (4,1);
