Further cleanup and added README.

--- a/clustdata/results/figures/Figure1.tex
+++ b/clustdata/results/figures/Figure1.tex
@@ -78,9 +78,9 @@
 \node[draw = none, fill = none] at (15.1, 1.6) {$\Dtest$};
 
 % iterations
-\node[fill = white, minimum width = 3cm, minimum height = 1cm, font = \Large] at (2, -5) {Iteration 1};
-\node[fill = white, minimum width = 3cm, minimum height = 1cm, font = \Large] at (8.5, -5) {Iteration 2};
-\node[fill = white, minimum width = 3cm, minimum height = 1cm, font = \Large] at (15, -5) {Iteration 3};
+\node[fill = white, minimum width = 3cm, minimum height = 1cm, font = \LARGE] at (2, -5) {Iteration 1};
+\node[fill = white, minimum width = 3cm, minimum height = 1cm, font = \LARGE] at (8.5, -5) {Iteration 2};
+\node[fill = white, minimum width = 3cm, minimum height = 1cm, font = \LARGE] at (15, -5) {Iteration 3};
 
 % lines
 \draw[dashed, line width = 2] (5,2.5) -- (5,-4);
